--- a/css/product.css
+++ b/css/product.css
@@ -33,7 +33,7 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
     }
     .product_mainTxt{
         /* background-color: green; */
-        width: 90%;
+        width: 89%;
         z-index: 1;
         position: absolute;
         bottom: 125px;
@@ -78,13 +78,148 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
 
 /* 2 Page */
 .product_page2{
-    background-color: yellowgreen;
-    width: 100%; 
-    height: 130%;
-    position: relative;
+    /* background-color: yellowgreen; */
+    width: 89%; 
+    height: 140%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    border-bottom: 0.5px solid #999999;
 }
     .product_p2Inbox{
-        background-color: tomato;
-        width: 90%;
-        height: 85%;
+        /* background-color: tomato; */
+        position: relative;
+        width: 100%;
+        height: 80%;
+        display: flex;
     }
+        .product_p2Img1{
+            width: 58%;
+            height: 100%;
+            flex: 0 0 58%; /* flex-grow:0, flex-shrink:0, flex-basis:58%라서 축소/확장 안 되고 58% 고정 */
+            /* background-color: #b89c53; */
+        }
+            .product_p2Img1 img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                display: block;
+            }
+        .product_p2Img2{
+            position: absolute;
+            left: 48.1%; top: 215px;
+        }
+        .product_p2txt1{
+            position: absolute;
+            left: 48.1%; top: 58%;
+            font-size: 38.5px;
+            font-weight: lighter;
+            font-family: "Cormorant Garamond", serif;
+            letter-spacing: -0.2rem;
+            color: 000000;
+        }
+        .product_p2txt2{
+            position: absolute;
+            left: 64%; bottom: 0;
+        }
+            .product_p2txt2 h4{
+                font-size: 24px;
+                margin-bottom: 30px;
+                font-weight: 500;
+                color: #000000;
+            }
+            .product_p2txt2 p{
+                font-size: 17px;
+                font-weight: 500;
+                color: #333333;
+                font-weight: 400;
+                line-height: 2;
+            }
+
+/* 3 Page */
+.product_page3{
+    /* background-color: thistle; */
+    width: 89%;
+    height: 220%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding-top: 130px;
+}
+    .product_p3Box1{
+        width: 100%;
+        height: 40%;
+        display: flex;
+        justify-content: space-between;
+    }
+        .product_p3Box1 a{
+            width: 32%;
+            height: 100%;
+            /* background-color: tomato; */
+        }
+            .product_p3Box1 a img{
+                width: 100%;
+                height: 85%;
+            }
+    
+    .product_p3Box2{
+        width: 100%;
+        height: 40%;
+        display: flex;
+        justify-content: space-between;
+    }
+        .product_p3Box2 a{
+            width: 32%;
+            height: 100%;
+            /* background-color: tomato; */
+        }
+            .product_p3Box2 a img{
+                width: 100%;
+                height: 85%;
+            }
+    
+    .product_p3Tbox{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        color: #000000;
+    }
+        .product_p3Tbox h2{
+            font-weight: 500;
+            font-size: 23px;
+        }
+        .product_p3Tboxin{
+            display: flex;
+            margin-top: 5px;
+            color: #777777;
+        }
+        .product_bb{
+            display: flex;
+        }
+            .product_bb div{
+                margin-top: 7px;
+                width: 15px;
+                height: 14px;
+                /* background-color: #000000; */
+            }
+            .product_bb div:nth-child(1){
+                border-right: 1px solid #999999;
+            }
+    
+    .product_p3Box3{
+        /* background-color: #999999; */
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+        .product_p3Box3 h2{
+            width: 14px;
+            height: 32px;
+            font-size: 20px;
+            border-bottom: 2px solid #000000;
+        }
