--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
-style.css
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+body {
+  width: 100vw;
+  overflow-x: hidden;
+  background-color: #f5f3ee;
+}
